Replaced fixed-size list with singleton list Performance boost